--- a/app/src/main/res/layout/chat_window.xml
+++ b/app/src/main/res/layout/chat_window.xml
@@ -8,6 +8,12 @@
     tools:context=".MainActivity">
 
     <!-- Include the toolbar layout -->
+    <include
+        android:id="@+id/topbar"
+        layout="@layout/bar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <ImageButton
@@ -39,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="100dp"
         android:background="#00FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
