--- a/app/src/main/res/layout/chat_window.xml
+++ b/app/src/main/res/layout/chat_window.xml
@@ -2,43 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     android:id="@+id/chatWindow"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <!-- Include the toolbar layout -->
-    <include
-        android:id="@+id/topbar"
-        layout="@layout/bar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        >
 
-
-    <ImageButton
-        android:id="@+id/sendButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        android:backgroundTint="#1EA323"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_media_play" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/chatInput"
-        android:layout_width="275dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="65dp"
-        android:layout_marginBottom="15dp"
-        android:backgroundTint="#FFFFFF"
-        android:drawableTint="#FFFFFF"
-        android:foregroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="this" />
+        <include
+            android:id="@+id/bottombar"
+            layout="@layout/chatwindowbottombar" />
+    </RelativeLayout>
 
     <ImageButton
         android:id="@+id/backbtn"
@@ -50,5 +30,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?attr/actionModeCloseDrawable" />
+
+    <include
+        android:id="@+id/topbar"
+        layout="@layout/chatwindowtopbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
